--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -1,10 +1,53 @@
-@import "./assets/styles/pages/homePage";
-
-*,
-*::before,
-*::after {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+* {
   margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  padding: 0;
 }
 
+@layer base {
+  html {
+    font-family: Roboto, system-ui, sans-serif;
+  }
+
+  h1 {
+    @apply text-zinc-500 text-4xl py-4;
+  }
+
+  h2 {
+    @apply text-zinc-500 text-3xl py-2;
+  }
+
+  h3 {
+    @apply text-zinc-500 text-2xl py-2;
+  }
+
+  h4 {
+    @apply text-zinc-500 text-xl py-2;
+  }
+
+  h5 {
+    @apply text-zinc-500 text-lg py-2;
+  }
+
+  @variants responsive {
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+  }
+}
+
+#scrollbar {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
