--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -45,6 +45,22 @@
   }
 }
 
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.bounce {
+  animation: bounce 0.5s ease-in-out infinite;
+}
+
 #scrollbar {
   &::-webkit-scrollbar {
     display: none;
