--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -45,21 +45,22 @@
   }
 }
 
-@keyframes bounce {
+@keyframes fall {
   0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-20px);
+    opacity: 0;
+    transform: translateY(-100%);
   }
   100% {
+    opacity: 1;
     transform: translateY(0);
   }
 }
 
-.bounce {
-  animation: bounce 0.5s ease-in-out infinite;
+.animate-fall {
+  animation: fall 1s ease-in-out;
+  animation-fill-mode: backwards;
 }
+
 
 #scrollbar {
   &::-webkit-scrollbar {
